--- a/style.css
+++ b/style.css
@@ -46,6 +46,9 @@ h1{
 }
 p{
     margin-top: 2em;
+    color: white; 
+    text-shadow: 0px 0px 2px black;
+    word-spacing: 10px;
 }
 .VerticalApp img{
     width: 2em;
@@ -70,12 +73,23 @@ p{
         height:100%;
         width:15%;
         float:left;
-        max-width:150px;
+        max-width:80px;
         position: fixed;
         top: 0;
+        margin-right: 20px;
+        opacity: 0.8;
+    }
+    nav a:link, a:visited {
+        text-decoration: none;
+        color: black;
+    }
+    nav h1{
+        text-align: center;
+        font-size: 16px;
+        margin: 30% 10% 0% 10%;
     }
     #Contentwrapper{
-        margin-left:150px;
+        margin:0% 10% 0% 20%;
 
     }
     #Button1 {
@@ -117,8 +131,8 @@ p{
         float:left;
         overflow:hidden;
         position:fixed;
-    }
-    
+    }   
+
     #Button1 {
         height:100%;
         width:50px;
