--- a/style.css
+++ b/style.css
@@ -1,23 +1,3 @@
-/*
-                                 ////
-                                ////
-                               ////
-                      *********************
-                   ***************************
-                 ******** ************* ********
-                ********   ***********   ********
-               ********     *********     ********
-              *************************************
-              *************************************
-              *************************************
-               ******     ***       ***     ******
-                ******    ***  ***  ***    ******
-                 ******        ***        ******
-                   ***************************
-                      *********************
-
-                        Main CSS - Yanis
-*/
 * {
     margin: 0;
 }
@@ -25,8 +5,23 @@ body {
     background-color: #FFF5EE;
     width:100%;
     margin:0;
+}
+
+nav {
+    background-color:darkblue;
+    height: 40px;
+    width:100%;
+    float:left;
+    position: fixed;
+    top: 0;
+    margin-right: 20px;
+    display: inline-block;
+}
+
+nav a {
 
 }
+
 #Contentwrapper{
     margin-top: 2em;
 }
@@ -34,6 +29,7 @@ body {
 #Logo {
         display:none;
 }
+
 #Language{
     height: 100%;
         float: right
@@ -45,21 +41,26 @@ h1{
     font-weight: bold;
 
 }
+
 p{
     margin-top: 2em;
     color: white;
     text-shadow: 0px 0px 2px black;
     word-spacing: 10px;
 }
+
 .app{
     display: block;
 }
+
 #downloads{
     float: left;
 }
+
 #screen{
     display: inline-block;
 }
+
 .store a img{
     width: 2em;
     height: auto;
@@ -69,22 +70,25 @@ p{
     width: 2em;
     height: 2em;
 }
+
 .VerticalImg a img{
     width: 80%;
 }
+
 .Vertical{
     width: 30%;
     margin-top: 2em;
 }
+
 #Follow{
     width: 20em;
     display: inline-block;
 }
+
 .SocialIcon {
     margin: 3px;
     display: inline-block;
     width: 3em;
-
 }
 
 /* CSS-en under blir bare kjørt dersom device width er over 650px (PC) */
@@ -100,47 +104,54 @@ p{
         margin-right: 20px;
         display: inline-block;
     }
+
     #Dropdown  div{
         float: left;
         width: 10em;
     }
+
     nav a:link, a:visited {
         text-decoration: none;
         color: black;
     }
+
     nav h1{
         text-align: center;
         font-size: 16px;
         margin: 30% 10% 0% 10%;
     }
-    #Contentwrapper{
-        margin:0% 10% 0% 20%;
-        margin-top: 10%;
 
-    }
     #Button1 {
         height:10vh;
-        background-color:blue;
-        margin:0;
-        overflow:hidden;
-        width: 20em
+        background-color: blue;
+        margin: 0;
+        overflow: hidden;
+        width: 20em;
+
     }
+
     #Button2 {
         height:10vh;
         background-color:red;
         margin:0;
         overflow:hidden;
+        width: 20em;
+        text-align: center;
     }
+
     #Button3 {
         height:10vh;
         background-color:green;
         margin:0;
         overflow:hidden;
+        width: 20em;
     }
+
     #Verticals{
         display:flex;
         align-items: center;
     }
+
     footer {
       background-color: darkgrey;
     }
