Made footer more pretty to look at

--- a/style.css
+++ b/style.css
@@ -90,6 +90,12 @@ p{
     display: inline-block;
     width: 3em;
 }
+footer{
+    background-color: black;
+    display: flex;
+    padding: 1em ;
+}
+
 
 /* CSS-en under blir bare kjørt dersom device width er over 650px (PC) */
 
@@ -153,7 +159,6 @@ p{
     }
 
     footer {
-      background-color: darkgrey;
     }
 
 
