--- a/style.css
+++ b/style.css
@@ -2,13 +2,13 @@
     margin: 0;
 }
 body {
-    background-color: #F7F7F7;
-    width:100%;
+    background-color:#F7F7F7;
     margin:0;
+    width: 100%;
 }
 
 nav {
-    background-color:#1b63e8;
+    background-color:#cccbc9;
     height:5em;
     width:100%;
     float:left;
@@ -56,12 +56,16 @@ p{
 }
 #lang{
     background-color:#ff3f3f;
+    margin-bottom: 5px;
 }
 #bokstav{
     background-color:#1b63e8;
+    margin-bottom: 5px;
 }
 #bil{
     background-color:#11c625;
+    margin-bottom: 5px;
+    
 }
 .text{
     display: block;
