--- a/style.css
+++ b/style.css
@@ -16,11 +16,13 @@ nav {
     top: 0;
     margin-right: 20px;
     display: inline-block;
+    overflow:hidden;
 }
 
 nav div {
   margin: 0;
 }
+
 a{
     text-decoration: none;
     color: black;
@@ -147,7 +149,7 @@ p{
     width: 3em;
 }
 footer{
-    background-color: black;
+    background-color: #1F1F1F;
     display: flex;
     padding: 1em ;
 }
@@ -157,7 +159,7 @@ footer{
     height:auto;
     margin-top:auto;
     margin-bottom:auto;
-    float:left;
+    float:right;
     border-radius: 20px;
     padding:10px;
     font-family: Verdana;
