--- a/style.css
+++ b/style.css
@@ -125,7 +125,12 @@ div .text{
     width: 50%;
     padding: 1em;
     border-radius: 30px;
+    box-shadow: 0px 0px 100px black;
     margin-left: 4%;
+    line-height: 300%;
+}
+div h2{
+    color: red;
 }
 
 .screenshot{
@@ -201,19 +206,6 @@ div .text{
 #About a{
     color: lightblue;
 }
-
-#Button1:hover {
-    transform:rotate(5deg);
-}
-
-#Button2:hover {
-    transform:rotate(-5deg);
-}
-
-#Button3:hover {
-    transform:rotate(5deg);
-}
-
 /* CSS-en under blir bare kjørt dersom device width er over 650px (PC) */
 
 @media only screen and (min-width: 650px) {
