--- a/style.css
+++ b/style.css
@@ -124,10 +124,10 @@ div .text{
     float: left;
     width: 50%;
     padding: 1em;
-    border-radius: 30px;
-    box-shadow: 0px 0px 100px black;
+    box-shadow: 2px 2px 10px black;
     margin-left: 4%;
     line-height: 300%;
+    font-family: Calibri;
 }
 div h2{
     color: red;
