--- a/style.css
+++ b/style.css
@@ -49,23 +49,20 @@ margin-top: 5.3em;
 }
 .show-menu {
   float: right;
-  height: 5em;
+  height: 100%;
   width: 7em;
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-	text-decoration: none;
-	color: #fff;
-	background: #19c589;
-	text-align: center;
-	padding: 10px 0;
 	display: none;
+}
+.show-menu img{
+  margin: 10px;
+  margin-left: 40px;
+  position: absolute;
+  width: auto;
+  height: 4em;
 }
 input[type=checkbox]{
     display: none;
-    }
-
-input[type=checkbox]:checked ~ #menu{
-    display: block;
-    }
+  }
 #menu  div{
         float: left;
         width: 10em;
@@ -251,16 +248,20 @@ div h2{
 
 @media only screen and (max-width: 41em) {
 
-nav	ul {
-		position: static;
-		display: none;
-	}
-  nav li {
+  #menu{
     display: none;
   }
-nav  ul div{
-    display: none;
+  #menu div{
+    width: 100%;
+    height: 3.5em;
   }
+  input[type=checkbox]:checked ~ #menu{
+      display: block;
+      }
+nav{
+  height:auto;
+}
+
 
 	.show-menu {
 		display:block;
