--- a/style.css
+++ b/style.css
@@ -15,9 +15,10 @@ nav {
     position: fixed;
     top: 0;
     margin-right: 20px;
-    display: inline-block;
     overflow:hidden;
     z-index: 3;
+    align-items: center;
+    justify-content: center;
 }
 
 nav div {
@@ -33,10 +34,9 @@ nav img{
 }
 
 nav h1{
+    margin-top: 2em;
     text-align: center;
     font-size: 16px;
-    padding: 10px 10px 0 10px;
-    margin-top: 12%;
 
 }
 #Logo{
@@ -50,12 +50,12 @@ margin-top: 5.3em;
 .show-menu {
   float: right;
   height: 100%;
-  width: 7em;
+  width: 6em;
 	display: none;
 }
 .show-menu img{
   margin: 10px;
-  margin-left: 40px;
+  margin-left: 25px;
   position: absolute;
   width: auto;
   height: 4em;
@@ -86,7 +86,6 @@ ul{
     background-color: #6666ff;
 }
 h1{
-    text-align: center;
     font-family: Verdana;
     font-weight: bold;
     font-size: 16px;
@@ -249,11 +248,13 @@ div h2{
 @media only screen and (max-width: 41em) {
 
   #menu{
+
     display: none;
   }
   #menu div{
     width: 100%;
     height: 3.5em;
+
   }
   input[type=checkbox]:checked ~ #menu{
       display: block;
@@ -261,7 +262,10 @@ div h2{
 nav{
   height:auto;
 }
+nav h1{
+  margin-top: 1em;
 
+}
 
 	.show-menu {
 		display:block;
